Corrected alignment of list block text.

--- a/_sass/components/_list-block.scss
+++ b/_sass/components/_list-block.scss
@@ -25,7 +25,7 @@
 
   .list-block-list {
     margin: 0.5rem 0;
-    margin-left: -1.25rem;
+    margin-left: -1rem;
   }
 
     .list-block-list-item {
